modify makefile to change folder structure and change the sampleCodeModule folder to PinkOS, that's the point of entry to the user space

--- a/Userland/PinkOS/Makefile
+++ b/Userland/PinkOS/Makefile
@@ -1,12 +1,12 @@
 # include ../Makefile.inc
 
-# MODULE=0000-sampleCodeModule.bin
+# MODULE=0000-PinkOS.bin
 # SOURCES=$(wildcard [^_]*.c)
 
 # all: $(MODULE)
 
 # $(MODULE): $(SOURCES)
-# 	$(GCC) $(GCCFLAGS) -T sampleCodeModule.ld _loader.c $(SOURCES) -o ../$(MODULE)
+# 	$(GCC) $(GCCFLAGS) -T PinkOS.ld _loader.c $(SOURCES) -o ../$(MODULE)
 
 # clean:
 # 	rm -rf *.o
@@ -15,7 +15,7 @@
 
 include ../Makefile.inc
 
-MODULE=0000-sampleCodeModule.bin
+MODULE=0000-PinkOS.bin
 SOURCES=$(wildcard [^_]*.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
 OBJECTS=$(SOURCES:.C=.o)
@@ -25,7 +25,7 @@ STATICCLIBS=
 all: $(MODULE)
 
 $(MODULE): $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS)
-	$(GCC) $(GCCFLAGS) -T sampleCodeModule.ld _loader.c -o ../$(MODULE) $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS)
+	$(GCC) $(GCCFLAGS) -T PinkOS.ld _loader.c -o ../$(MODULE) $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS)
 
 %.o: %.c
 	$(GCC) $(GCCFLAGS) -I./include -c $< -o $@
