--- a/Userland/Makefile
+++ b/Userland/Makefile
@@ -2,17 +2,17 @@ include Makefile.inc
 
 SAMPLE_DATA=0001-sampleDataModule.bin
 
-all: sampleCodeModule sampleDataModule
+all: PinkOS sampleDataModule
 
-sampleCodeModule:
-	cd SampleCodeModule; make
+PinkOS:
+	cd PinkOS; make
 
 sampleDataModule:
 	printf "This is sample data." >> $(SAMPLE_DATA) && dd if=/dev/zero bs=1 count=1 >> $(SAMPLE_DATA)
 
 clean:
-	cd SampleCodeModule; make clean
+	cd PinkOS; make clean
 	rm -rf *.bin
 
 
-.PHONY: sampleCodeModule all clean
+.PHONY: PinkOS all clean
