restructured folders/files and update Makefile accordingly, also modified .run.sh to support Mac computers (tested on M1 macbook)

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -4,9 +4,19 @@ KERNEL=kernel.bin
 SOURCES=$(wildcard *.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
 DRIVER_SOURCES=$(wildcard drivers/*.c)
+EVENT_HANDLING_SOURCES=$(wildcard eventHandling/*.c)
+INTERRUPT_SOURCES=$(wildcard interrupts/*.c)
+EXCEPTION_SOURCES=$(wildcard exceptions/*.c)
+SYSCALLS_SOURCES=$(wildcard syscalls/*.c)
+
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
 DRIVER_OBJECTS=$(DRIVER_SOURCES:.c=.o)
+EVENT_HANDLING_OBJECTS=$(EVENT_HANDLING_SOURCES:.c=.o)
+INTERRUPT_OBJECTS=$(INTERRUPT_SOURCES:.c=.o)
+EXCEPTION_OBJECTS=$(EXCEPTION_SOURCES:.c=.o)
+SYSCALL_OBJECTS=$(SYSCALLS_SOURCES:.c=.o)
+
 LOADERSRC=loader.asm
 
 LOADEROBJECT=$(LOADERSRC:.asm=.o)
@@ -14,8 +24,8 @@ STATICLIBS=
 
 all: $(KERNEL)
 
-$(KERNEL): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(DRIVER_OBJECTS)
-	$(LD) $(LDFLAGS) -T kernel.ld -o $(KERNEL) $(LOADEROBJECT) $(OBJECTS) $(DRIVER_OBJECTS) $(OBJECTS_ASM) $(STATICLIBS)
+$(KERNEL): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(DRIVER_OBJECTS) $(EVENT_HANDLING_OBJECTS) $(INTERRUPT_OBJECTS) $(EXCEPTION_OBJECTS) $(SYSCALL_OBJECTS)
+	$(LD) $(LDFLAGS) -T kernel.ld -o $(KERNEL) $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(DRIVER_OBJECTS) $(EVENT_HANDLING_OBJECTS) $(INTERRUPT_OBJECTS) $(EXCEPTION_OBJECTS) $(SYSCALL_OBJECTS)
 
 %.o: %.c
 	$(GCC) $(GCCFLAGS) -I./include -c $< -o $@
