fix problem with includes in Userland makefile

--- a/Userland/PinkOS/Makefile
+++ b/Userland/PinkOS/Makefile
@@ -25,10 +25,7 @@ STATICCLIBS=
 all: $(MODULE)
 
 $(MODULE): $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS)
-	$(GCC) $(GCCFLAGS) -T PinkOS.ld _loader.c -o ../$(MODULE) $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS)
-
-%.o: %.c
-	$(GCC) $(GCCFLAGS) -I./include -c $< -o $@
+	$(GCC) $(GCCFLAGS) -T PinkOS.ld _loader.c -I./include -o ../$(MODULE) $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS)
 
 %.o : %.asm
 	$(ASM) $(ASMFLAGS) $< -o $@
