--- a/Userland/Makefile
+++ b/Userland/Makefile
@@ -8,8 +8,8 @@ PinkOS:
 	cd PinkOS; make
 
 sampleDataModule:
-	printf "This is sample data." >> $(SAMPLE_DATA) && dd if=/dev/zero bs=1 count=1 >> $(SAMPLE_DATA)
-
+	# printf "This is sample data." >> $(SAMPLE_DATA) && dd if=/dev/zero bs=1 count=1 >> $(SAMPLE_DATA)
+	./createSampleDataModule.sh
 clean:
 	cd PinkOS; make clean
 	rm -rf *.bin
