Refactor de todo Userland, ahora esta el stdpink completo siguiendo las nuevas syscalls
Co-authored-by: lukpeluk <lukpeluk@users.noreply.github.com>

--- a/Userland/PinkOS/Makefile
+++ b/Userland/PinkOS/Makefile
@@ -18,20 +18,26 @@ include ../Makefile.inc
 MODULE=0000-PinkOS.bin
 SOURCES=$(wildcard [^_]*.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
-PROGRAM_SOURCES=$(wildcard programs/*.c)
+# PROGRAM_SOURCES=$(wildcard programs/*.c)
+SUB_SOURCES=$(wildcard */*.c)
+
 OBJECTS=$(SOURCES:.C=.o)
+SUB_OBJECTS=$(SUB_SOURCES:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
 STATICCLIBS=
 
+# INCLUDES = -Iinclude -Iinclude/libs -Iinclude/syscalls
+INCLUDES = $(foreach dir,$(shell find . -type d),-I$(dir))
 all: $(MODULE)
 
-$(MODULE): $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS) $(PROGRAM_SOURCES)
-	$(GCC) $(GCCFLAGS) -T PinkOS.ld _loader.c -I./include -o ../$(MODULE) $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS) $(PROGRAM_SOURCES)
+$(MODULE): _loader.c $(OBJECTS) $(SUB_OBJECTS) $(OBJECTS_ASM)
+	$(GCC) $(GCCFLAGS) -T PinkOS.ld -o ../$(MODULE) _loader.c $(OBJECTS) $(SUB_OBJECTS) $(OBJECTS_ASM) $(STATICLIBS) $(INCLUDES)
 
-%.o : %.asm
+%.o: %.c
+	$(GCC) $(GCCFLAGS) $(INCLUDES) -c $< -o $@
+
+%.o: %.asm
 	$(ASM) $(ASMFLAGS) $< -o $@
 
 clean:
-	rm -rf asm/*.o *.o
-
-.PHONY: all clean print
+	find . -type f -name '*.o' -delete
