Ahora tenemos gdb. Usa el ./run.sh -d para correr en  modo debug para gdb

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -1,6 +1,7 @@
 include Makefile.inc
 
 KERNEL=kernel.bin
+KERNEL_ELF=kernel.elf
 SOURCES=$(wildcard src/*.c)
 SUB_SOURCES=$(wildcard src/*/*.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
@@ -14,12 +15,15 @@ LOADERSRC=loader.asm
 LOADEROBJECT=$(LOADERSRC:.asm=.o)
 STATICLIBS=
 
-all: $(KERNEL)
+all: $(KERNEL) $(KERNEL_ELF)
 
 # $(KERNEL): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(DRIVER_OBJECTS) $(SCHEDULER_OBJECTS) $(EVENT_HANDLING_OBJECTS) $(INTERRUPT_OBJECTS) $(EXCEPTION_OBJECTS) $(SYSCALL_OBJECTS)
 # 	$(LD) $(LDFLAGS) -T kernel.ld -o $(KERNEL) $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(DRIVER_OBJECTS) $(SCHEDULER_OBJECTS) $(EVENT_HANDLING_OBJECTS) $(INTERRUPT_OBJECTS) $(EXCEPTION_OBJECTS) $(SYSCALL_OBJECTS)
 $(KERNEL): $(LOADEROBJECT) $(OBJECTS) $(SUB_OBJECTS) $(OBJECTS_ASM)
 	$(LD) $(LDFLAGS) -T kernel.ld -o $(KERNEL) $(LOADEROBJECT) $(OBJECTS) $(SUB_OBJECTS) $(OBJECTS_ASM)
+
+$(KERNEL_ELF): $(LOADEROBJECT) $(OBJECTS) $(SUB_OBJECTS) $(OBJECTS_ASM)
+	$(LD) $(LDFLAGS) -T kernel_elf.ld -o $(KERNEL_ELF) $(LOADEROBJECT) $(OBJECTS) $(SUB_OBJECTS) $(OBJECTS_ASM)
 
 %.o: %.c
 	$(GCC) $(GCCFLAGS) -I./include -c $< -o $@
@@ -33,5 +37,6 @@ $(LOADEROBJECT):
 clean:
 	find . -type f -name '*.o' -delete
 	find . -type f -name '*.bin' -delete
+	find . -type f -name '*.elf' -delete
 
 .PHONY: all clean
