--- a/Userland/Makefile.inc
+++ b/Userland/Makefile.inc
@@ -4,6 +4,6 @@ LD=x86_64-linux-gnu-ld
 AR=x86_64-linux-gnu-ar
 ASM=nasm
 
-GCCFLAGS=-m64 -fno-exceptions -std=c99 -Wall -ffreestanding -nostdlib -fno-common -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -fno-builtin-malloc -fno-builtin-free -fno-builtin-realloc -funsigned-char
+GCCFLAGS=-m64 -fno-exceptions -std=c99 -Wall -ffreestanding -nostdlib -fno-common -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -fno-builtin-malloc -fno-builtin-free -fno-builtin-realloc -funsigned-char -g -O0
 ARFLAGS=rvs
-ASMFLAGS=-felf64
+ASMFLAGS=-felf64 -g -F dwarf
